use next-express-jwt

--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
   "homepage": "https://github.com/postor/minfont-generator#readme",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "babel-preset-stage-2": "^6.24.1",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "csurf": "^1.9.0",
     "express": "^4.16.2",
-    "jsonwebtoken": "^8.1.1",
     "next": "^4.2.1",
+    "next-express-jwt": "^1.0.2",
     "next-i18n-helper": "^1.0.19",
     "next-routes": "^1.2.0",
     "next.js-redux-helper": "^1.0.5",
