--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.js",
     "build-server": "gulp build-server",
     "dev": "npm run build-server && node server-dist/server.js",
     "lint": "gulp lint"
@@ -22,7 +22,6 @@
   "homepage": "https://github.com/postor/minfont-generator#readme",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "babel-preset-stage-2": "^6.24.1",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "csurf": "^1.9.0",
@@ -42,9 +41,17 @@
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.1.2",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "cross-env": "^5.1.3",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint-plugin-react": "^7.5.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
-    "gulp-eslint": "^4.0.0"
+    "gulp-eslint": "^4.0.0",
+    "gulp-jest": "^3.0.1",
+    "jest": "^22.2.1",
+    "react-addons-test-utils": "^15.6.2",
+    "react-test-renderer": "^16.2.0"
   }
 }
