--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "csurf": "^1.9.0",
+    "differencify": "^1.3.0",
     "express": "^4.16.2",
     "next": "^4.2.1",
     "next-express-jwt": "^1.0.2",
